RESOLVED FIXED57680
Crash when calling WebPageProxy::setMemoryCacheClientCallsEnabled with an invalid Web Process
https://bugs.webkit.org/show_bug.cgi?id=57680
Summary Crash when calling WebPageProxy::setMemoryCacheClientCallsEnabled with an inv...
Brian Weinstein
Reported 2011-04-01 16:30:24 PDT
There is a crash when calling WebPageProxy::setMemoryCacheClientCallsEnabled with an invalid web process. <rdar://problem/9202909>
Attachments
[PATCH] Fix (1.26 KB, patch)
2011-04-01 16:31 PDT, Brian Weinstein
andersca: review+
Brian Weinstein
Comment 1 2011-04-01 16:31:46 PDT
Created attachment 87939 [details] [PATCH] Fix
Brian Weinstein
Comment 2 2011-04-01 16:34:05 PDT
Landed in r82744.
Note You need to log in before you can comment on or make changes to this bug.