Crash when calling WebPageProxy::setMemoryCacheClientCallsEnabled with an invalid Web Process https://bugs.webkit.org/show_bug.cgi?id=57680 <rdar://problem/9202909>

Reviewed by Anders Carlsson.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::setMemoryCacheClientCallsEnabled): Add an isValid check before sending
    the message.



Canonical link: https://commits.webkit.org/72531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82744 268f45cc-cd09-0410-ab3c-d52691b4dbfc